# elephantpump

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  META.json  Makefile  README.md  build.rs  generate_bindings.sh  rustfmt.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ci_tools/: prepare_linux.sh  prepare_osx.sh
doc/: jsoncdc.md
src/: lib.rs
test/: run_tests.sh  test_fixture.sql
util/: checkstyle  docker-pg  docker-rust
