[package]
name = "jsoncdc"
version = "0.0.12"
authors = ["Alex Newman <posi@planet.com>",
           "Jason Dusek <jason.dusek@gmail.com>"]
build = "build.rs"


[features]
# Enables support for PG 9.6 (and later) logical decoding messages.
pg-ldc-messages = ["serde_json", "base64"]

[lib]
name = "jsoncdc"
crate-type = ["dylib"]

[dependencies]
libc = "^0.2.36"
base64 = { version = "^0.9", optional = true }
rpgffi = "0.3.3"
serde_json = { version = "1.*", optional = true }

[dev-dependencies]
rustfmt = "*"

[build-dependencies]
cc = "^1.0.4"
